# Fanwit

./: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_regression.yml
scripts/: name.cjs  version.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
