[package]
name = "fanwit"
version = "0.1.0"
description = "A Tauri App"
authors = ["dilicalflame"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fanwit_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
version = "2.5.6"
features = []

[dependencies]
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.tauri]
version = "2.10.3"
features = []
